# fin

./: .editorconfig  .gitattributes  .gitignore  .next  .svelte-kit  .venv  AGENTS.md  Cargo.toml  PLAN.md  PROMPT.md  biome.json  commitlint.config.js  fin.config.template.toml  fin.rules.example.json  fin.rules.example.toml  fin.rules.template.ts  lint-staged.config.js  loop.sh  package.json  prd.json  progress.txt  tickets.csv  tsconfig.json
.agents/skills/: fin
.claude/skills/fin/: SKILL.md
crates/fin-api/: Cargo.toml
crates/fin-api/src/: api.rs  cli.rs  main.rs  runtime.rs  server.rs
crates/fin-api/tests/: contract_parity.rs
crates/fin-api/tests/golden/: contract.json
crates/fin-cli/: Cargo.toml
crates/fin-cli/src/: envelope.rs  error.rs  main.rs  registry.rs
crates/fin-cli/src/commands/: config.rs  edit.rs  health.rs  import.rs  mod.rs  report.rs  rules.rs  sanitize.rs  start.rs  tools.rs  version.rs  view.rs
crates/fin-cli/tests/: contract_parity.rs
crates/fin-cli/tests/golden/: tools.json
crates/fin-sdk/: Cargo.toml
crates/fin-sdk/examples/: build_fixture.rs  read_fixture.rs
crates/fin-sdk/src/: allocation.rs  burn.rs  categories.rs  compat.rs  contracts.rs  dashboard.rs  error.rs  health.rs  import.rs  insights.rs  lib.rs  mutations.rs  projection.rs  queries.rs  reports.rs  runtime.rs  sanitize.rs  stats.rs  timeseries.rs  transactions.rs  units.rs
crates/fin-sdk/src/config/: loader.rs  mod.rs  model.rs  paths.rs
crates/fin-sdk/src/db/: connection.rs  migrate.rs  mod.rs  schema.rs  seed.rs
crates/fin-sdk/src/rules/: loader.rs  migrate_ts.rs  mod.rs  model.rs
crates/fin-sdk/src/testing/: fixture.rs
crates/fin-sdk/tests/: fixture_determinism.rs
crates/fin-tui/: Cargo.toml
crates/fin-tui/src/: app.rs  cache.rs  fetch.rs  main.rs  palette.rs  routes.rs  theme.rs  ui.rs
crates/fin-tui/src/fetch/: context.rs  loaders.rs  models.rs
crates/fin-tui/src/ui/: widgets.rs
crates/fin-tui/src/ui/views/: cashflow.rs  categories.rs  mod.rs  overview.rs  reports.rs  summary.rs  transactions.rs
docs/: fin-api.md  rust-cutover-handoff.md
docs/benchmarks/: api-007-fin-api.md  perf-001-batched-readers.md  perf-002-shared-series.md  perf-003-transactions.md  qa-001-baseline.md  qa-002-final.md
scripts/: dev.test.ts  dev.ts
scripts/benchmarks/: baseline.sh  fin-api.sh
scripts/cert/: README.md  certify_commands.sh  reset_fixtures.sh
scripts/cert/fixtures/: README.md  business-monzo.csv  malformed.csv  personal-investments.csv
scripts/parity/: README.md  certify_commands.sh  commands.txt  db_snapshot.sh  execution-policy.md  extract_archive_baseline.sh  reset_fixtures.sh  run_parity.sh
scripts/parity/archive-baseline/: README.md  command-files.txt  command-names.txt  core-domain-files.txt  metadata.txt
scripts/parity/fixtures/: business-wise.csv  joint-monzo.csv  personal-monzo.csv  personal-savings.csv
scripts/rust/: README.md  guard_no_legacy.sh  install_fin.sh  verify_fin_path.sh
tests/fixtures/benchmark/: fin.config.toml  fin.rules.json  fixture-spec.json
tests/parity/: archive-parity-matrix.csv
