[workspace]
resolver = "2"
members = [
  "crates/fin-sdk",
  "crates/fin-cli",
  "crates/fin-tui",
  "crates/fin-api",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
csv = "1.3.1"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
