[package]
name = "fin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "fin-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
fin-sdk = { path = "../fin-sdk" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.19.1"
