[package]
name = "fin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "fin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
fin-sdk = { path = "../fin-sdk" }
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.19.1"
