[package]
name = "fin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
json5 = "0.4.1"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.19.1"
