[package]
name = "fin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
json5 = "0.4.1"
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8.20"
uuid.workspace = true

[dev-dependencies]
tempfile = "3.19.1"
