[package]
name = "fin-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "fin-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rusqlite.workspace = true
fin-sdk = { path = "../fin-sdk" }
